<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                app:cardCornerRadius="8dp"
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp">
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:iss_auto_cycle="true"
                    app:iss_delay="1500"
                    app:iss_period="1500" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:id="@+id/appName"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="18sp"/>

            <TextView
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:id="@+id/textView1"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/Tagline"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="18sp"/>

            <TextView
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:id="@+id/textView2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="ABOUT US"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/green"/>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/aboutUs"
                    android:fontFamily="sans-serif-black"
                    android:textSize="15sp"
                    android:text="@string/aboutUs"
                    android:layout_gravity="center"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:lineSpacingExtra="4dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@id/textView3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:text="MISSION AND VISSION"
                android:textColor="@color/green"/>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/mission"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:textSize="15sp"
                    android:text="@string/missionVision"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:lineSpacingExtra="4dp"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@id/textView4"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25sp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:text="APP FEATURES"
                android:textColor="@color/green"/>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="200dp"
                app:cardCornerRadius="8dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">
                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>