<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginPage">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="88dp"
        android:layout_height="89dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heartlogo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/kindness_hub"
        android:textColor="@color/welcomeText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Tagline"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/admin1"
        android:textColor="@color/welcomeText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/loginAdminEmail"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/login_white_strokes"
        android:drawableLeft="@drawable/mail_icon"
        android:drawablePadding="10sp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="@+id/loginText"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/loginText"
        app:layout_constraintTop_toBottomOf="@+id/loginText" />

    <EditText
        android:id="@+id/loginAdminPassword"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_white_strokes"
        android:drawableLeft="@drawable/lock_icon"
        android:drawablePadding="10sp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingLeft="10sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAdminEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/loginAdminEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminEmail" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="21dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="Or"
        android:textAlignment="center"
        android:textColor="@color/welcomeText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAdminPassword"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/loginAdminPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gbtn"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/white_button_gradient"
        android:drawableLeft="@drawable/google_icon"
        android:drawablePadding="10sp"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="10sp"
        android:text="Sign In With Google"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="152sp"
        android:layout_height="50sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/green_button_gradient"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/loginAdminPassword"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/loginAdminPassword"
        app:layout_constraintTop_toBottomOf="@+id/loginAdminPassword" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="166dp"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/no_account"
        android:textAlignment="center"
        android:textColor="@color/welcomeText"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="DESIGNED BY\nIII BCA, SBC"
        android:textColor="@color/welcomeText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>