<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminSignupPage">

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="74dp"
        android:scrollbars="none"
        tools:layout_editor_absoluteY="121dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="88dp"
                android:layout_height="89dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/heartlogo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/kindness_hub"
                android:textColor="@color/welcomeText"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/Tagline"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="Register Your Organisation"
                android:textAlignment="center"
                android:textColor="@color/welcomeText"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="Choose Your Location"
                android:textSize="14sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edit_text"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:elevation="5dp"
                app:endIconDrawable="@drawable/location_icon"
                app:endIconTint="@color/black">

                <AutoCompleteTextView
                    android:id="@+id/listLocation"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:fontFamily="sans-serif-black"
                    android:inputType="none"
                    android:hint="Choose Location"/>
            </com.google.android.material.textfield.TextInputLayout>


            <EditText
                android:id="@+id/nameOwner"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_white_strokes"
                android:drawableStart="@drawable/user_icon"
                android:drawablePadding="10sp"
                android:elevation="5dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Name of the Owner"
                android:paddingStart="10sp"/>

            <EditText
                android:id="@+id/nameOrganisation"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_white_strokes"
                android:drawableStart="@drawable/home_icon"
                android:drawablePadding="10sp"
                android:elevation="5dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Name of the Organisation"
                android:paddingLeft="10sp"/>

            <EditText
                android:id="@+id/adminEmail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_white_strokes"
                android:drawableStart="@drawable/mail_icon"
                android:drawablePadding="10sp"
                android:elevation="5dp"
                android:ems="10"
                android:inputType="text"
                android:hint="Email or Phone Number"
                android:paddingLeft="10sp"/>

            <EditText
                android:id="@+id/adminPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_white_strokes"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="10sp"
                android:elevation="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Choose a Password"
                android:paddingLeft="10sp"/>

            <EditText
                android:id="@+id/adminRepPassword"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_white_strokes"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="10sp"
                android:elevation="5dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="Re-enter the Password"
                android:paddingLeft="10sp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createAdminBtn"
                android:layout_width="250dp"
                android:layout_height="50sp"
                android:layout_marginTop="20dp"
                android:background="@drawable/green_button_gradient"
                android:fontFamily="sans-serif-black"
                android:text="Create Account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="166dp"
                android:layout_height="19dp"
                android:layout_marginTop="25dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/al_account"
                android:textAlignment="center"
                android:textColor="@color/welcomeText"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="DESIGNED BY\nIII BCA, SBC"
                android:textColor="@color/welcomeText"
                android:textSize="15sp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
